--- a/tribute.html
+++ b/tribute.html
@@ -8,35 +8,34 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <div id="main">
-        <h1 id="title">Jimi Hendrix</h1>
-        <figure>
-            <img src="./image/1.jpg" alt="Jimi Hendrix Portrait">
-            <figcaption> <em>One of the<strong> Greatest Guitarist</strong> ever.</em> </figcaption>  
-        </figure>
-    </div>
+    <section class="main">
+        <div id="main">
+            <h1 id="title">Jimi Hendrix</h1>
+            <figure class="established">
+                <img src="./image/1.jpg" alt="Jimi Hendrix Portrait">
+                <figcaption> <em>One of the<strong> Greatest Guitarist</strong> ever.</em> </figcaption>  
+            </figure>
+        </div>
     <hr>
-    <div id="tribute-info">
-        <ol>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-        </ol>
-<p>Here is a quote from WWF's website:</p>
-
-<blockquote cite="http://www.worldwildlife.org/who/index.html">
-For 50 years, WWF has been protecting the future of nature. The world's leading conservation organization, WWF works in 100 countries and is supported by 1.2 million members in the United States and close to 5 million globally.
-</blockquote>
-<a href="https://en.wikipedia.org/wiki/jimi_hendrix" target="_blank">
-    <small>Learn more about Jimi Hendrix.</small> 
-</a>
-</div>
+        <div id="tribute-info">
+            <ol>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ol>
+            <p>Here is a quote from WWF's website:</p>
+            <blockquote cite="http://www.worldwildlife.org/who/index.html">
+                For 50 years, WWF has been protecting the future of nature. The world's leading conservation organization, WWF works in 100 countries and is supported by 1.2 million members in the United States and close to 5 million globally.
+            </blockquote>
+            <p><a href="https://en.wikipedia.org/wiki/jimi_hendrix" target="_blank"><small>Learn more about Jimi Hendrix.</small> </a></p>
+        </div>
+    </section>
 </body>
 </html>
