--- a/tribute.html
+++ b/tribute.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
     <title>Tribute Page</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">z
 </head>
 <body>
     <section class="main">
         <div id="main">
             <h1 id="title">Jimi Hendrix</h1>
             <figure class="established">
-                <img src="./image/1.jpg" alt="Jimi Hendrix Portrait">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR6dV_LsqnLwnHWaLOfsEw8T0Y4X4bKPIjnfg&usqp=CAU" alt="Jimi Hendrix Portrait">
                 <figcaption> <em>One of the<strong> Greatest Guitarist</strong> ever.</em> </figcaption>  
             </figure>
         </div>
