--- a/tribute.html
+++ b/tribute.html
@@ -13,11 +13,54 @@
             <h1 id="title">Jimi Hendrix</h1>
             <figure class="established">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR6dV_LsqnLwnHWaLOfsEw8T0Y4X4bKPIjnfg&usqp=CAU" alt="Jimi Hendrix Portrait">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR6dV_LsqnLwnHWaLOfsEw8T0Y4X4bKPIjnfg&usqp=CAU" alt="Jimi Hendrix Portrait">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR6dV_LsqnLwnHWaLOfsEw8T0Y4X4bKPIjnfg&usqp=CAU" alt="Jimi Hendrix Portrait">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR6dV_LsqnLwnHWaLOfsEw8T0Y4X4bKPIjnfg&usqp=CAU" alt="Jimi Hendrix Portrait">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR6dV_LsqnLwnHWaLOfsEw8T0Y4X4bKPIjnfg&usqp=CAU" alt="Jimi Hendrix Portrait">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR6dV_LsqnLwnHWaLOfsEw8T0Y4X4bKPIjnfg&usqp=CAU" alt="Jimi Hendrix Portrait">
                 <figcaption> <em>One of the<strong> Greatest Guitarist</strong> ever.</em> </figcaption>  
             </figure>
         </div>
     <hr>
         <div id="tribute-info">
+            <i>
+            <p><strong>Castles Made Of Sand</strong></p>
+            <p>Down the street, you can hear her scream, "You're a disgrace"</p>
+            <p>As she slams the door in his drunken face </p>
+            <p>And now he stands outside</p>
+            <p>And all the neighbors start to gossip and drool</p>
+            <p>cries, "Oh girl, you must be mad</p>
+            <p>What happened to the sweet love you and me had?"</p>
+            <p>Against the door he leans and starts a scene</p>
+            <p>his tears fall and burn on the garden green</p> 
+            <p>so castles made of sand</p> 
+            <p>Fall in the sea</p>
+            <p>Eventually</p>
+            <p>A little Indian brave who before he was ten</p>
+            <p>Played war games in the woods with his Indian friends</p>
+            <p>And he built a dream that when he grew up</p>
+            <p>He would be a fierce warrior Indian chief</p>
+            <p>Many moons passed 'fore the dream grew strong</p>
+            <p>Until tomorrow he would sing his first war song</p>
+            <p>And fight his first battle, but something went wrong</p>
+            <p>Surprise attack killed him in his sleep that night</p>
+            <p>And so castles made of sand</p>
+            <p>Melts into the sea</p>
+            <p>Eventually</p>
+            <p>There was a young girl whose heart was a frown</p>
+            <p>Because she was crippled for life, and she couldn't speak a sound</p>
+            <p>And she wished and prayed she could stop living</p>
+            <p>So she decided to die</p>
+            <p>She drove her wheelchair to the edge of the shore</p>
+            <p>And to her legs she smiled, "You won't hurt me no more"</p>
+            <p>But then a sight she'd never seen made her jump and say</p>
+            <p>"Look, a golden winged ship is passing my way"</p>
+            <p>And it really didn't ever stop</p>
+            <p>It just kept on going</p>
+            <p>And so castles made of sand</p>
+            <p>Slips into the sea</p>
+            <p>Eventually</p>
+            </i>
             <ol>
                 <li></li>
                 <li></li>
@@ -30,9 +73,9 @@
                 <li></li>
                 <li></li>
             </ol>
-            <p>Here is a quote from WWF's website:</p>
-            <blockquote cite="http://www.worldwildlife.org/who/index.html">
-                For 50 years, WWF has been protecting the future of nature. The world's leading conservation organization, WWF works in 100 countries and is supported by 1.2 million members in the United States and close to 5 million globally.
+            <p>Here is a quote from Brainyquote website:</p>
+            <blockquote cite="https://www.brainyquote.com/authors/jimi-hendrix-quotes">
+                When the power of love overcomes the love of power the world will know peace.
             </blockquote>
             <p><a href="https://en.wikipedia.org/wiki/jimi_hendrix" target="_blank"><small>Learn more about Jimi Hendrix.</small> </a></p>
         </div>
